# zephyr-rak5010

./: .gitignore  CMakeLists.txt  README.md  prj.conf
board/nrf52_rak5010/: Kconfig.board  Kconfig.defconfig  board.c  desktop.ini  nrf52_rak5010.dts  nrf52_rak5010_defconfig
driver/bg96/: Kconfig.quectel-bg96  quectel,bg96.yaml  quectel-bg96.c
src/: main.c
src/boards/nrf52_rak5010/: CMakeLists.txt  Kconfig  Kconfig.defconfig  board.c  board.h  nrf52_rak5010.dts  nrf52_rak5010.yaml  nrf52_rak5010_defconfig
src/drivers/modem/: CMakeLists.txt  modem_cmd_handler.c  modem_cmd_handler.h  modem_context.c  modem_context.h  modem_iface_uart.c  modem_iface_uart.h  modem_receiver.c  modem_shell.c
src/libraries/lightning/: CMakeLists.txt  app_lightning.c  app_lightning.h
src/libraries/net/at_cmd_parser/: CMakeLists.txt  at_cmd_parser.h
src/libraries/net/mqtt_lc/: CMakeLists.txt  certificates.h  mqtt_lc.c  mqtt_lc.h
src/libraries/net/net_lc/: CMakeLists.txt  net_lc.c  net_lc.h
